--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -7,11 +7,11 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>Home</title>
+<title>#{msg['project.title']}</title>
 </head>
 <ui:composition template="/resources/template/main-template.xhtml">
 
-	<ui:define name="content">
+	<ui:define name="main">
 		<f:view>
 			<h:form>
 				<h2>#{msg['home.title']}</h2>
